changing to java21